<resources>
    <string name="app_name">Radio Button</string>
    <string name="radio_group">Radio Group</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="custom_radio_button">Custom Radio Button</string>
    <string name="d">D</string>
    <string name="increase_radio_button_size">Increase Radio Button Size</string>
    <string name="e">E</string>
</resources>